src/objects/SBQQ__Quote__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__PaperSize__c</fullName>
        <description>Paper size of this document.</description>
        <inlineHelpText>Choose the paper size for this document.</inlineHelpText>
        <label>Paper Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PaperSize</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PartnerDiscount__c</fullName>
        <description>Discount extended to the partner on this opportunity.</description>
        <inlineHelpText>Discount extended to the partner on this opportunity.</inlineHelpText>
        <label>Partner Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary partner on this deal (if any). Defaulted to partner marked as primary in Partners related list on the opportunity.</description>
        <inlineHelpText>Primary partner on this deal (if any). This field defaults to the partner marked as primary in the Partners related list on the opportunity.</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Quotes</relationshipLabel>
        <relationshipName>PartnerQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaymentTerms__c</fullName>
        <description>Terms that govern payment of the items in this quote.</description>
        <inlineHelpText>Terms that govern payment of the items in this quote.</inlineHelpText>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due on receipt</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                    <default>true</default>
                    <label>Net 30</label>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price Book associated with this Quote.</description>
        <inlineHelpText>Price Book associated with this Quote.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricebookId__c</fullName>
        <description>ID of the Price Book used by this quote.</description>
        <inlineHelpText>ID of the Price Book used by this quote.</inlineHelpText>
        <label>Pricebook ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact for the quote. This person&apos;s name will appear on generated quote document.</description>
        <inlineHelpText>Primary contact for the quote. This person&apos;s name will appear on generated quote document.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox which if checked designates the quote as the Primary Quote</description>
        <inlineHelpText>Select this checkbox to designate this quote as the primary one on the opportunity and sync quote line items with opportunity line items.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLanguage__c</fullName>
        <description>Language used for this Quote when mass generating Quote Documents</description>
        <inlineHelpText>Language used for this Quote when mass generating Quote Documents</inlineHelpText>
        <label>Quote Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Spanish (Mexican)</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazilian)</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteProcessId__c</fullName>
        <description>ID of the quote process to use with this quote. This field is meant to be populated by a workflow rule.</description>
        <inlineHelpText>Guided selling process ID to use with this quote, if any.</inlineHelpText>
        <label>Quote Process Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteTemplateId__c</fullName>
        <description>ID of quote template that must be used when generating documents from this quote.</description>
        <inlineHelpText>Stores a quote template ID if one is specified to use when generating quote PDF documents.</inlineHelpText>
        <label>Quote Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RegularAmount__c</fullName>
        <description>Roll up of regular amounts of quote products.</description>
        <inlineHelpText>Total amount of non-optional line times before additional discounts are applied.</inlineHelpText>
        <label>Regular Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__RegularTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales rep responsible for this quote if different from the user who owns the quote record.</description>
        <inlineHelpText>Sales rep responsible for this quote if different from the user who owns the quote record.</inlineHelpText>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingCity__c</fullName>
        <description>City on the Ship To address for this quote.</description>
        <inlineHelpText>City on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingCountry__c</fullName>
        <description>Country on the Ship To address for this quote.</description>
        <inlineHelpText>Country on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingName__c</fullName>
        <description>Name on the Ship To address for this quote.</description>
        <inlineHelpText>Name on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingPostalCode__c</fullName>
        <description>Postal Code on the Ship To address for this quote.</description>
        <inlineHelpText>Postal Code on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingState__c</fullName>
        <description>State/Province on the Ship To address for this quote.</description>
        <inlineHelpText>State/Province on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingStreet__c</fullName>
        <description>Street on the Ship To address for this quote.</description>
        <inlineHelpText>Street on the Ship To address for this quote.</inlineHelpText>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source of cloned quote.</description>
        <inlineHelpText>Source of cloned quote. If cloned, this references the original quote cloned.</inlineHelpText>
        <label>Source</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quotes (Source)</relationshipLabel>
        <relationshipName>Clones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__StartDate__c</fullName>
        <description>Start date for subscriptions in this quote.</description>
        <inlineHelpText>Start date for subscriptions in this quote.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__Status__c</fullName>
        <description>Status indicating where quote is in its lifecycle.</description>
        <inlineHelpText>Status indicating where quote is in its lifecycle.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Presented</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <description>Subscription term used to prorate eligible products by day or month.  This has been set by your administrator.</description>
        <inlineHelpText>Subscription term used to prorate eligible products by day or month.  This has been set by your administrator.</inlineHelpText>
        <label>Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__TargetCustomerAmount__c</fullName>
        <description>Customer amount to be targeted in calculating additional discounts.</description>
        <inlineHelpText>Enter desired customer amount to automatically calculate additional discount on discountable line items.</inlineHelpText>
        <label>Target Customer Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalCustomerDiscountAmount__c</fullName>
        <description>Total amount of customer discount. This includes any contracted, volume, compound rate and additional discounts.</description>
        <formula>SBQQ__ListAmount__c - SBQQ__CustomerAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total amount of customer discount. This includes any contracted, volume, compound rate and additional discounts.</inlineHelpText>
        <label>Total Customer Disc. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Indicates the type of quote.</description>
        <inlineHelpText>Indicates the type of quote.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Re-Quote</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Uncalculated__c</fullName>
        <description>If selected, the quote hasn’t been calculated.</description>
        <formula>( NOT( ISNULL( SBQQ__LastCalculatedOn__c ) ) &amp;&amp; SBQQ__LastSavedOn__c &gt; SBQQ__LastCalculatedOn__c ) || ( NOT ( ISNULL ( SBQQ__LastSavedOn__c) ) &amp;&amp; ISNULL ( SBQQ__LastCalculatedOn__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If selected, the quote hasn’t yet been calculated.</inlineHelpText>
        <label>Uncalculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Unopened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the quote has ever been opened to determine if it is a new quote.</description>
        <inlineHelpText>Indicates whether the quote has ever been opened to determine if it is a new quote.</inlineHelpText>
        <label>Unopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__WatermarkShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the watermark in the Quote Document is displayed.</description>
        <inlineHelpText>Select the checkbox to display watermark in the Quote Document.</inlineHelpText>
        <label>Watermark Shown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_of_Users__c</fullName>
        <formula>SBQQ__Opportunity2__r.Total_No_Users__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X13_Months_for_Price_Of_12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>13 Months for Price Of 12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X14_Months_for_Price_Of_12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>14 Months for Price Of 12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X180_Day_Early_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>180 Day Early Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X90_Day_Early_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>90 Day Early Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zonda_Pro_Addendum__c</fullName>
        <formula>IF(Zonda_Pro_Quote_Template__c &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zonda Pro Addendum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zonda_Pro_Quote_Template__c</fullName>
        <label>Zonda Pro Quote Template</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Product_Name_Price_Rule__c</field>
            <operation>contains</operation>
            <value>Zonda Pro</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>has_modified_quote_term__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has modified quote term</label>
        <type>Checkbox</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Opportunity2__c</columns>
        <columns>SBQQ__Type__c</columns>
        <columns>SBQQ__Primary__c</columns>
        <columns>SBQQ__LineItemsGrouped__c</columns>
        <columns>SBQQ__NetAmount__c</columns>
        <columns>SBQQ__Status__c</columns>
        <columns>SBQQ__ExpirationDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <recordTypes>
        <fullName>Quote_Approved</fullName>
        <active>true</active>
        <label>Quote Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_Creation_Screen</fullName>
        <active>true</active>
        <label>Quote Creation Screen</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_Pre_Approved</fullName>
        <active>true</active>
        <label>Quote Pre-Approved</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_add_additional_promotions</fullName>
        <active>false</active>
        <description>After quote is approved</description>
        <errorConditionFormula>IF(AND(TEXT(SBQQ__Status__c) = &quot;Approved&quot;, OR(ISCHANGED(X90_Day_Early_Opt_Out__c), ISCHANGED(X180_Day_Early_Opt_Out__c),ISCHANGED( X14_Months_for_Price_Of_12__c),ISCHANGED( X13_Months_for_Price_Of_12__c),ISCHANGED(Free_iPad__c))), true, false)</errorConditionFormula>
        <errorMessage>Cannot change promotions after approval. Set status back to &quot;Draft&quot; to reset. You will have to re-submit for approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_of_I_pads_isnt_blank</fullName>
        <active>false</active>
        <description>If the Free iPad box is checked the # of iPads field must have a value. 
If the # of iPads has a value the Free iPad box must be checked.</description>
        <errorConditionFormula>OR(
(Free_iPad__c = True  &amp;&amp; ( ISBLANK( Number_of_Ipads__c ) || Number_of_Ipads__c = 0)),
(Free_iPad__c = False  &amp;&amp; ( NOT(ISBLANK( Number_of_Ipads__c )) || Number_of_Ipads__c &lt;&gt; 0))
)</errorConditionFormula>
        <errorDisplayField>Number_of_Ipads__c</errorDisplayField>
        <errorMessage>If the Free iPad box is checked,the Number of iPads field must have a value other than Zero.  (OR)                                                                     
If the Number of iPads has a value other than Zero, the Free iPad box must be checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__End_Date_Before_Start_Date</fullName>
        <active>true</active>
        <description>Validates End Date comes after the Start Date</description>
        <errorConditionFormula>IF( AND( NOT(ISNULL(SBQQ__EndDate__c)), SBQQ__EndDate__c &lt; SBQQ__StartDate__c), TRUE, null)</errorConditionFormula>
        <errorMessage>The End Date must come after the Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Invalid_First_Segment_Term_End_Date</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISNULL(SBQQ__FirstSegmentTermEndDate__c)) &amp;&amp; NOT(ISNULL(SBQQ__StartDate__c)) &amp;&amp; (NOT(ISNULL(SBQQ__SubscriptionTerm__c)) || NOT(ISNULL(SBQQ__EndDate__c))) &amp;&amp;
            (SBQQ__FirstSegmentTermEndDate__c &lt; SBQQ__StartDate__c || IF(NOT(ISNULL(SBQQ__EndDate__c)),SBQQ__FirstSegmentTermEndDate__c &gt; SBQQ__EndDate__c, IF(LOWER($Setup.SBQQ__GeneralSettings__c.SBQQ__SubscriptionTermUnit__c)=&apos;day&apos;, SBQQ__FirstSegmentTermEndDate__c &gt; SBQQ__StartDate__c + SBQQ__SubscriptionTerm__c-1, SBQQ__FirstSegmentTermEndDate__c &gt; SBQQ__StartDate__c + (SBQQ__SubscriptionTerm__c * 30.4375))))</errorConditionFormula>
        <errorDisplayField>SBQQ__FirstSegmentTermEndDate__c</errorDisplayField>
        <errorMessage>First Segment Term End Date must fall between Quote Start Date and Quote End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Invalid_Subscription_Term</fullName>
        <active>true</active>
        <description>Validates that subscription term is positive</description>
        <errorConditionFormula>IF( AND( NOT(ISNULL(SBQQ__SubscriptionTerm__c)), SBQQ__SubscriptionTerm__c &lt;= 0), TRUE, null)</errorConditionFormula>
        <errorMessage>The subscription term must be a positive number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>X13_OR_14_Months_for_Price_Of_12</fullName>
        <active>true</active>
        <description>Prevent 13 and 14 months for the price of 12 from being added at the same time</description>
        <errorConditionFormula>AND( X13_Months_for_Price_Of_12__c = TRUE, X14_Months_for_Price_Of_12__c = TRUE )</errorConditionFormula>
        <errorDisplayField>X13_Months_for_Price_Of_12__c</errorDisplayField>
        <errorMessage>Both 13 months and 14 months for the price of 12 cannot be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>x90_OR_180_day_opt_out</fullName>
        <active>true</active>
        <description>Prevent 90 and 180 days from being added at the same time</description>
        <errorConditionFormula>AND( X180_Day_Early_Opt_Out__c = TRUE, X90_Day_Early_Opt_Out__c = TRUE )</errorConditionFormula>
        <errorDisplayField>X90_Day_Early_Opt_Out__c</errorDisplayField>
        <errorMessage>Both 90 day opt out and 180 day opt out cannot be selected</errorMessage>
    </validationRules>
</CustomObject>